# IPC

./: CMakeLists.txt  IPC_fifo_read.c  IPC_fifo_write.c  IPC_pipe.c  README.md  build.sh
